javaOptions doesn't consume because fork is false
move these options to Makefile

set system property phoenix.env to test at TestBase
because it can be another before we launch tests
(for ex. development after console used)